fix(api): fix path
